--- a/package.json
+++ b/package.json
@@ -14,18 +14,26 @@
   },
   "dependencies": {
     "@monaco-editor/react": "^4.7.0",
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "firebase": "^10.7.0",
     "framer-motion": "^10.18.0",
+    "helmet": "^8.1.0",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.294.0",
+    "multer": "^2.0.2",
     "next": "14.0.0",
+    "rate-limiter-flexible": "^7.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "uuid": "^9.0.1",
     "vm2": "^3.9.19"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.17",
+    "@types/bcryptjs": "^3.0.0",
+    "@types/cors": "^2.8.19",
+    "@types/jsonwebtoken": "^9.0.10",
+    "@types/multer": "^2.0.0",
     "@types/node": "^24.1.0",
     "@types/react": "^19.1.9",
     "@types/react-dom": "^19.1.7",
